<resources>
    <string name="app_name">Talent Baby</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="create_account">Create Account</string>
    <string name="join_today">Join Talent Baby today</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="nav_home">Home</string>
    <string name="nav_activities">Activities</string>
    <string name="nav_milestones_tab">Milestones</string>
    <string name="nav_knowledge">Knowledge</string>
    <string name="knowledge">Knowledge</string>
    <string name="knowledge_coming_soon">Coming Soon</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_articles">Articles</string>
    <string name="nav_profile">Profile</string>
    <string name="feedback_saved">Feedback saved</string>
    <string name="add_baby_first">Please add a baby first</string>
    <string name="hello_parent">Hello, %s!</string>
    <string name="baby_age_format" formatted="false">%s - %d months old</string>
    <string name="no_baby_yet">No baby added yet</string>
    <string name="add_baby">Add Baby</string>
    <string name="todays_activities">Today\'s Activities</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="feeding">Feeding</string>
    <string name="sleep">Sleep</string>
    <string name="diaper">Diaper</string>
    <string name="growth">Growth</string>
    <string name="view_all">View All</string>
    <string name="daily_tip">Daily Tip</string>
    <string name="activities_title">Activities</string>
    <string name="activity_details">Activity Details</string>
    <string name="start_activity">Start Activity</string>
    <string name="complete_activity">Complete</string>
    <string name="minutes">%d min</string>
    <string name="age_range" formatted="false">%d-%d months</string>
    <string name="no_activities">No activities available</string>
    <string name="filter_by_category">Filter by Category</string>
    <string name="all_categories">All</string>
    <string name="recipes_title">Recipes</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="prep_time">Prep: %d min</string>
    <string name="cook_time">Cook: %d min</string>
    <string name="servings">%d servings</string>
    <string name="nutrition_info">Nutrition Info</string>
    <string name="no_recipes">No recipes available</string>
    <string name="calories">%d cal</string>
    <string name="articles_title">Articles</string>
    <string name="article_details">Article Details</string>
    <string name="read_more">Read More</string>
    <string name="no_articles">No articles available</string>
    <string name="min_read">%d min read</string>
    <string name="profile_title">Profile</string>
    <string name="my_babies">My Babies</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="baby_name">Baby Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="birth_weight">Birth Weight (kg)</string>
    <string name="birth_height">Birth Height (cm)</string>
    <string name="todays_development_plan">Today\'s Development Plan</string>
    <string name="parenting_support">Parenting Support</string>
    <string name="what_to_expect">What to expect this month?</string>
    <string name="milestone_achieved">Milestone Achieved</string>
    <string name="daily_tracker">Daily Tracker</string>
    <string name="poop_pee">Poop &amp; Pee</string>
    <string name="view_analysis">Click to View Analysis</string>
    <string name="tips_for_today">Tips For Today</string>
    <string name="tab_physical">Physical</string>
    <string name="tab_cognitive">Cognitive</string>
    <string name="tab_speech">Speech</string>
    <string name="tab_social">Social</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="activity_count">%d activities today</string>
    <string name="nav_milestones">Milestones</string>
    <string name="nav_tracker">Tracker</string>
    <string name="nav_tips">Tips</string>
    <string name="category_activities">Activities</string>
    <string name="category_milestones">Milestones</string>
    <string name="category_weight">Weight</string>
    <string name="category_nutrition">Nutrition</string>
    <string name="category_stories">Stories</string>
    <string name="category_articles">Articles</string>
    <string name="done_by_babies">Done by %,d Babies</string>
    <string name="too_easy">Too Easy</string>
    <string name="too_hard">Too Hard</string>
    <string name="frequency">Frequency</string>
    <string name="benefits_label">Benefits</string>
    <string name="materials_label">Materials Required</string>
    <string name="once_a_day">Once a day for a week</string>
    <string name="doctor_verified">Doctor Verified</string>
    <string name="mark_done">Mark as Done</string>
    <string name="sidebar_upgrade">Upgrade to Premium</string>
    <string name="sidebar_add_partner">Add Partner</string>
    <string name="sidebar_invite">Invite a Friend</string>
    <string name="sidebar_parenting_support">Parenting Support</string>
    <string name="sidebar_rate_us">Rate Us</string>
    <string name="sidebar_more_options">More Options</string>
    <string name="sidebar_corporate">Corporate Access</string>
    <string name="sidebar_terms">Terms of Service</string>
    <string name="sidebar_privacy">Privacy Policy</string>
    <string name="sidebar_delete_account">Delete account</string>
    <string name="sidebar_add_baby">Add Baby</string>
    <string name="confirm_delete_account">Delete your account? This cannot be undone.</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="award_winning">Award-Winning Development App</string>
    <string name="google_play_2022">Google Play 2022</string>
    <string name="welcome_headline">Raise a Curious &amp;\nHappy Baby!</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="already_a_user">I am already a user?</string>
    <string name="onboarding_info_title">Raising a Curious Baby!</string>
    <string name="onboarding_info_subtitle">The science of baby development.</string>
    <string name="info_block_1">85% of brain development happens in the first 1000 days of life</string>
    <string name="info_block_2">Key to unlock curiosity is the right stimulation at the right time</string>
    <string name="info_block_3">Playtime activities stimulate baby\'s growth and maximise their potential</string>
    <string name="set_parenting_goals">Set Parenting Goals</string>
    <string name="goals_title">Set your parenting goals…</string>
    <string name="goals_subtitle">We\'ll personalise the program based on it.</string>
    <string name="goal_1">Boost Development with Activities</string>
    <string name="goal_2">Measure Progress with Milestones</string>
    <string name="goal_3">Spark Imagination with Stories</string>
    <string name="goal_4">Get Meal Plan &amp; Recipe Ideas</string>
    <string name="goal_5">Analyse Sleep &amp; Feeding Patterns</string>
    <string name="continue_btn">Continue</string>
    <string name="create_account_title">Create your account</string>
    <string name="save_progress_subtitle">to save your progress.</string>
    <string name="continue_google">Continue with Google</string>
    <string name="continue_email">Continue with Email</string>
    <string name="loved_by_parents">Loved by 500k+ Parents</string>
    <string name="login_with_email">Login with email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="field_required">Please fill in all fields</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="login_success">Welcome back!</string>
    <string name="signup_success">Account created!</string>
    <string name="splash_tagline">Nurture your baby\'s talents</string>
    <string name="personalise_plan_title">Let\'s personalise your plan</string>
    <string name="baby_dob">Baby\'s DOB</string>
    <string name="is_premature">Is the baby premature?</string>
    <string name="scheduled_dob">Scheduled DOB</string>
    <string name="premature_hint">For premature babies, the program will use the scheduled DOB.</string>
    <string name="your_name">Your Name</string>
    <string name="relationship_with_baby">Relationship with Baby</string>
    <string name="rel_father">Father</string>
    <string name="rel_mother">Mother</string>
    <string name="rel_grandfather">Grandfather</string>
    <string name="rel_grandmother">Grandmother</string>
    <string name="rel_babysitter">Babysitter</string>
    <string name="rel_other">Other</string>
    <string name="cat_activities_sub">Boost your baby\'s growth</string>
    <string name="cat_milestones_sub">Create growth reports for baby</string>
    <string name="cat_weight_sub">Track height &amp; weight</string>
    <string name="cat_nutrition_sub">Recipes for baby &amp; mom</string>
    <string name="cat_stories_sub">Boost creativity and imagination</string>
    <string name="cat_articles_sub">Daily dose of wisdom for you</string>
    <string name="record_baby_feeds">Record Baby Feeds</string>
    <string name="record_body_waste">Record Body Waste</string>
    <string name="record_baby_sleep">Record Baby Sleep</string>
    <string name="tab_communication">Communication</string>
    <string name="month_num">%d Month</string>
    <string name="see_more">See more</string>
    <string name="check_milestone_progress">Check Milestone Progress</string>
    <string name="milestone_progress_subtitle">Gain insights into your baby\'s progress by benchmarking with data of 50,439 babies</string>
    <string name="no_milestones">No milestones for this month</string>
    <string name="milestone_yes">Yes</string>
    <string name="milestone_no">No</string>
    <string name="milestone_almost">Almost</string>
    <string name="related_activities">Related Activities</string>
    <string name="tips_tab_tip">Tips</string>
    <string name="tips_tab_development">Development</string>
    <string name="tips_tab_safety">Safety</string>
    <string name="no_tips_today">No tips available</string>
    <string name="tip_type_tip">Tip</string>
    <string name="tip_type_development">Development</string>
    <string name="tip_type_activity">Activity</string>
    <string name="tip_type_safety">Safety</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="tracker_count">%d entries</string>
    <string name="tracker_sleep_summary">%dh %dm</string>
    <string name="logged_success">Logged successfully</string>
    <string name="no_records_today">No records</string>
    <string name="duration_minutes_hint">Duration in minutes</string>
    <string name="duration_label">Sleep Duration</string>
</resources>